# CC-Code

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  conftest.py  docker-compose.yml  pyproject.toml  smoke_test.py  test_chinese_input.py  test_integration.py  test_optim.py  test_run.py  test_state_integration.py  visual_test.py
benchmarks/: benchmark_results.txt  cluster_stress_test.py  multi_round_stress_test.py  performance_benchmark.py
cc_code/: __init__.py  agent_intelligence.py  agent_loop.py  agent_metrics.py  agent_protocol.py  anthropic_adapter.py  auto_mode.py  background_tasks.py  cli_commands.py  config.py  context_isolation.py  context_manager.py  cron_runner.py  file_review.py  gateway.py  headless.py  history.py  hooks.py  install.py  io_atomic.py  logging_config.py  main.py  manage_cli.py  mcp.py  memory.py  memory_injector.py  mock_model.py  model_registry.py  openai_adapter.py  permissions.py  prompt.py  prompt_pipeline.py  safe_execution.py  session.py  skills.py  state.py  task_graph.py  task_tracker.py  tooling.py  tty_app.py  (+3 more)
docs/: ADVANCED_IMPROVEMENT_PLAN.md  SUBMODULE_SYNC.md
scripts/: replace_minicode.py
tests/: __init__.py  conftest.py  test_agent_intelligence.py  test_agent_loop.py  test_anthropic_adapter.py  test_cli_commands.py  test_cluster_stress.py  test_config.py  test_functional_completeness.py  test_helpers.py  test_integration.py  test_mcp.py  test_memory_benchmark.py  test_memory_e2e.py  test_memory_integration.py  test_mock_model.py  test_new_features.py  test_packaging.py  test_permissions.py  test_prompt.py  (+9 more)
(+76 files in other folders)
